k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fin-web-service
spec:
  type: ClusterIP
  selector:
    app: fin-web
  ports:
    - name: web
      protocol: TCP
      port: 4173
      targetPort: 4173
    - name: mock
      protocol: TCP
      port: 3001
      targetPort: 3001
